# msoc-plugin

./: .clang-format  .editorconfig  .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.md
scripts/: parse_msoc_log.py
src/: BudgetState.h  ClipMath.h  Config.cpp  Config.h  DebugTint.cpp  DebugTint.h  DiagnosticsLog.cpp  Exports.cpp  ExternalOccluders.cpp  ForensicsWatchdog.cpp  ForensicsWatchdog.h  FrameConfig.h  FrameDiag.h  FrameStats.h  HardwareTier.cpp  HardwareTier.h  HorizonOccluder.cpp  HorizonOccluder.h  LightCulling.cpp  LiveQuery.cpp  Log.cpp  Log.h  MWSEImports.cpp  MaskResources.cpp  OccluderClassify.cpp  OcclusionApi.h  OcclusionCaches.h  OcclusionInternal.h  OcclusionPass.cpp  PatchForensicsWatchdog.cpp  PatchForensicsWatchdog.h  PatchOcclusionCulling.cpp  PatchOcclusionCulling.h  Profiling.h  QueryApi.cpp  TerrainAggregation.cpp  plugin.cpp  stdafx.h
test-mod/MWSE/mods/msoc/: config.lua  main.lua  mcm.lua
test-mod/MWSE/mods/msoc/i18n/: eng.lua
tests/: clip_math_tests.cpp  hardware_tier_tests.cpp  horizon_occluder_tests.cpp  profiling_tests.cpp  test_main.cpp
